<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrganizersAddEventActivity"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organizer_dashboard"
        android:textSize="25dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/organizers_email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/organizer_create_event"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/organizer_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:inputType="textPersonName"
        android:hint="@string/event_name"/>

    <EditText
        android:id="@+id/organizer_event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:inputType="textPersonName"
        android:hint="@string/event_date"/>

    <EditText
        android:id="@+id/organizer_event_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:inputType="textPersonName"
        android:hint="@string/event_time"/>

    <EditText
        android:id="@+id/organizer_event_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:inputType="textPersonName"
        android:hint="@string/event_loc"/>

    <EditText
        android:id="@+id/organizer_event_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:inputType="textPersonName"
        android:hint="@string/event_desc"/>


    <Button
        android:id="@+id/organizers_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organizer_create"
        android:layout_marginTop="20dp"/>


</androidx.appcompat.widget.LinearLayoutCompat>