<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PayWall">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="451dp"
        android:layout_height="848dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_page__3_" />

    <TextView
        android:id="@+id/DonationHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donate"
        android:textSize="40sp"
        android:textColor="#fff"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="200dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/amount"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:paddingStart="20dp"
        android:textSize="24sp"
        android:background="@drawable/edittext_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DonationHeading" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/desc"
        android:textSize="24sp"
        android:paddingStart="20dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pay"
        style="@android:style/Widget.Button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/black_button"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:text="@string/pay"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc" />
</androidx.constraintlayout.widget.ConstraintLayout>