<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VolunteersDashboardActivity"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="451dp"
        android:layout_height="848dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_page__3_" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volunteer_dashboard"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="200dp"
        android:textColor="#fff"/>

    <LinearLayout
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/volunteer_dashboard"-->
<!--            android:textSize="25dp"-->
<!--            android:textStyle="bold"/>-->

        <TextView
            android:id="@+id/volunteer_email_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/volunteer_show_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/black_button"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:text="@string/volunteer_show_events"
            style="@android:style/Widget.Button"
            android:layout_marginTop="5dp"
            android:textSize="24sp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/volunteer_mark_attendance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/black_button"
            android:padding="10dp"
            android:textColor="#ffffff"
            style="@android:style/Widget.Button"
            android:layout_marginTop="5dp"
            android:text="@string/mark_attendance"
            android:textSize="24sp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/volunteer_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/black_button"
            android:padding="10dp"
            android:textColor="#ffffff"
            style="@android:style/Widget.Button"
            android:layout_marginTop="5dp"
            android:text="@string/logout"
            android:textSize="24sp"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>