<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="414dp"
        android:layout_height="889dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_page" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/Participants"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/background_btn_intro2"
            android:textColor="#fff"
            android:textSize="25dp"
            android:text="@string/participants" />

        <Button
            android:id="@+id/Volunteers"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/background_btn_intro2"
            android:textColor="#fff"
            android:textSize="25dp"
            android:text="@string/volunteers" />

        <Button
            android:id="@+id/Organizers"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/background_btn_intro2"
            android:textColor="#fff"
            android:textSize="25dp"
            android:text="@string/organizers" />

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </FrameLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>